--- a/Social-Media-App-Clone/package.json
+++ b/Social-Media-App-Clone/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.25.1",
     "uuid": "^10.0.0"
